Fix inconsistent line spacing in lists

--- a/style/main.scss
+++ b/style/main.scss
@@ -227,6 +227,7 @@ main {
 
 	p, a, li {
 		color: var(--color-text-content);
+		line-height: var(--font-line-height);
 	}
 }
 
